<resources>
    <string name="app_name">TacTalk</string>
    <string name="title">TacTalk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NextHalf">NextHalf</string>
    <string name="HalfTime">Next Half</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="Start">Start</string>
    <string name="matchstart">Start Recording!</string>
    <string name="startTime">0:00</string>
    <string name="GameOver">GameOver</string>
    <string name="HomeButton">Home</string>
    <string name="StatsButton">Stats</string>
    <string name="BackButton">Back</string>
    <string name="FirstHalf">1st Half</string>
    <string name="TeamA">Team A 0:00</string>
    <string name="TeamB">Team B 0:00</string>
    <string name="TeamAwinning">Team A 2-6</string>
    <string name="EndHalf">End Half</string>
</resources>